@@ -1,4 +1,4 @@
-Copyright (C) 2014 Peter Kacherginsky
+Copyright (C) 2014 Peter Kacherginsky, Marcello Salvati
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
